# my_first_App

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  VULKAN_SETUP.md  build.gradle.kts  convert_bge_to_onnx.py  gradle.properties  gradlew  settings.gradle.kts  txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  generate_vulkan_shaders.ps1  generate_vulkan_shaders.sh  llama_android.cpp  llama_android_stub.cpp  llama_jni.cpp  whisper_jni.cpp
app/src/main/java/com/localllm/app/: LocalLLMApplication.kt  MainActivity.kt
app/src/main/java/com/localllm/app/data/local/: LocalLLMDatabase.kt  PreferencesDataStore.kt
app/src/main/java/com/localllm/app/data/model/: ChatMessage.kt  Conversation.kt  DeviceInfo.kt  DownloadState.kt  GenerationConfig.kt  ModelInfo.kt  UserPreferences.kt
app/src/main/java/com/localllm/app/data/remote/: HuggingFaceApi.kt  ModelCatalogApi.kt  WebSearchService.kt
app/src/main/java/com/localllm/app/data/repository/: ConversationRepository.kt  ModelRepository.kt
app/src/main/java/com/localllm/app/di/: DatabaseModule.kt  InferenceModule.kt  NetworkModule.kt  RepositoryModule.kt  UseCaseModule.kt
app/src/main/java/com/localllm/app/domain/usecase/: ConversationUseCases.kt  GenerateResponseUseCase.kt  ModelUseCases.kt
app/src/main/java/com/localllm/app/inference/: InferenceEngine.kt  LlamaAndroid.kt  ModelManager.kt  WhisperAndroid.kt  WhisperManager.kt
app/src/main/java/com/localllm/app/rag/: DocumentChunkDao.kt  EmbeddingGenerator.kt  VectorStore.kt
app/src/main/java/com/localllm/app/ui/components/: ChatInput.kt  DeviceCapabilityCard.kt  FeatureCard.kt  MessageBubble.kt  ModelCard.kt  NothingComponents.kt
app/src/main/java/com/localllm/app/ui/navigation/: BottomNavBar.kt  Navigation.kt
app/src/main/java/com/localllm/app/ui/screen/: AskImageScreen.kt  AudioScribeScreen.kt  ChatScreen.kt  CodeCompanionScreen.kt  ConversationHistoryScreen.kt  ConversationTemplatesScreen.kt  DocumentChatScreen.kt  FlashcardScreen.kt  HomeScreen.kt  ModelLibraryScreen.kt  PromptLabScreen.kt  QuizScreen.kt  RAGChatScreen.kt  SettingsScreen.kt
app/src/main/java/com/localllm/app/ui/theme/: NothingTheme.kt  Theme.kt  Typography.kt
app/src/main/java/com/localllm/app/ui/viewmodel/: AskImageViewModel.kt  AudioScribeViewModel.kt  ChatViewModel.kt  CodeCompanionViewModel.kt  ConversationHistoryViewModel.kt  ConversationTemplatesViewModel.kt  DocumentChatViewModel.kt  FlashcardViewModel.kt  HomeViewModel.kt  ModelLibraryViewModel.kt  PromptLabViewModel.kt  QuizViewModel.kt  RAGChatViewModel.kt  SettingsViewModel.kt
app/src/main/java/com/localllm/app/util/: BatteryMonitor.kt  ConversationExporter.kt  DocumentParser.kt  HardwareCapabilities.kt  HardwareCapabilityDetector.kt  MemoryMonitor.kt  ModelDownloader.kt  ModelIconMapper.kt  ThinkingModeParser.kt  TtsManager.kt  VoiceSpeechRecognizer.kt
app/src/main/java/com/localllm/app/worker/: ModelDownloadWorker.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/localllm/app/util/: ModelIconMapperTest.kt
(+2 files in other folders)
